<resources>
    <string name="app_name">EMStrainer</string>
    <string name="main">Основные</string>
    <string name="power">Мощность</string>
    <string name="log">Лог</string>
    <string name="exportLog">Экспорт</string>
    <string name="saveLog">Сохранить</string>
    <string name="frequency">Частота</string>
    <string name="modulation">Модуляция</string>
    <string name="modulationFm">Fm-Модуляция:</string>
    <string name="modulationAm">Am-Модуляция:</string>
    <string name="frequencyVal">Гц</string>
    <string name="saveProfile">Новый профиль</string>
    <string name="configSettings">Профили</string>
    <string name="deviceNum"> Текущее устройство: </string>
    <string name="settings">Настройки</string>
    <string name="battery">АКБ:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ALLSTOPPOWER">СБРОС МОЩНОСТИ</string>
    <string name="textMuscleAll">Изменить все</string>
    <string name="training">Тренировки</string>
    <string name="devices">Костюмы</string>
    <string name="ports">Номер COM-порта</string>
    <string name="installChangePlusMinus">Измение мощности</string>
    <string name="newDevice">Новое устройство</string>
    <string name="areYouSureProfile">Профиль не был сохранен. Сохранить?</string>
    <string name="areYouSureDeleteProfile">Профиль будет удален</string>
    <string name="BTWasOn">Был включен Bluetooth"</string>
    <string name="upLimitPower">Лимит мощности</string>
    <string name="save">Сохранить</string>
    <string name="nameProfile">Название профиля</string>
    <string name="emsoutfit">EMS OutFit</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="delete">Удалить</string>
    <string name="connecting">Подключение...</string>
    <string name="stopJob">Соединение разорвано!</string>
    <string name="startJobGo">Соединить</string>
    <string name="stopJobGo">Разорвать</string>
    <string name="deleteAll">Убрать все</string>
    <string name="chooseAll">Выбрать все</string>
    <string name="power1">1-Грудь</string>
    <string name="power2">2-Пресс</string>
    <string name="power3">3-Косые</string>
    <string name="power4">4-Бицепс</string>
    <string name="power5">5-Трицепс</string>
    <string name="power6">6-Трапеция</string>
    <string name="power7">7-Спина верх</string>
    <string name="power8">8-Спина низ</string>
    <string name="power9">9-Ягодицы</string>
    <string name="power10">10-Бицепсы бедер</string>
    <string name="power11">11-Бедра</string>
    <string name="power12">12-Дельты</string>
    <string name="fast_control">Управление</string>
    <string name="Start">Старт</string>
    <string name="changeSelected">Изменить выбранные</string>
    <string name="ems_suit">EMS-костюм</string>
    <string name="noticeNewDevice">Перед поиском нового костюма убедитесь что другие костюмы отключены</string>
    <string name="offset">%f</string>
    <string name="artraining">AR-тренировки</string>
    <string name="easyFit">Начинающий</string>
    <string name="mediumFit">Любительский</string>
    <string name="hardFit">Профессиональный</string>
    <string name="pushWnenEnd">Когда закончите, нажмите</string>
</resources>